mobile responsive design

--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
                             <path
                                 d="m7 24c-2.2060547 0-4-1.7939453-4-3.9990234 0-2.2060547 1.7939453-4.0009766 4-4.0009766s4 1.7949219 4 4.0009766c0 2.2050781-1.7939453 3.9990234-4 3.9990234zm0-7c-1.6542969 0-3 1.3466797-3 3.0009766 0 1.6533203 1.3457031 2.9990234 3 2.9990234s3-1.3457031 3-2.9990234c0-1.6542969-1.3457031-3.0009766-3-3.0009766zm.0039062-1.8242188c-.4560547 0-.9121094-.1064453-1.2617188-.3164062l-5.0458984-3.8642578c-.4697265-.3642578-.696289-.8525391-.696289-1.4951172v-8c.0009766-.3730469.1679688-.7529297.4580078-1.0429688.2900391-.2905273.6689453-.4570312 1.0410156-.4570312h.0019531 10.9990235c.7851562 0 1.5.7148438 1.5 1.5v7.9277344c-.0009766.6762695-.2421875 1.2177734-.6953125 1.5668945l-5.0009766 3.8325195c-.3505859.2333985-.8251953.3486328-1.2998047.3486328zm-5.5058593-14.1757812c-.1044922 0-.2324219.0625-.3330078.1635742-.1015625.1020508-.1650391.230957-.1650391.3374024v7.9990234c0 .3305664.0888672.5341797.3066406.703125l4.9970703 3.8310547c.3330078.1953125 1.0859375.2001953 1.4208984-.0205078l4.9716797-3.8125c.2001954-.1542969.3027344-.4155274.303711-.7749024v-7.9267578c0-.2285156-.2714844-.4995117-.5-.4995117h-11-.0009766s0 0-.0009765 0z"
                                 fill="#484848"></path>
-
                         </svg>
                     </div>
                 </div>
@@ -381,6 +380,16 @@
                     <hr class="hr1">
 
 
+                    <div class="home calander-menu">
+                        <h1>5 nights in Hai Ya</h1>
+                        <ul>
+                            <li>16 Apr 2023-</li>
+                            <li>21 Apr 2023</li>
+                        </ul>
+                    </div>
+
+
+
 
                 </div>
             </div>
@@ -461,141 +470,11 @@
 
         <div class="space">
 
-            <div class="home calander-menu">
-                <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
-                focusable="false" style="display: block; height: 25px; width: 25px; fill: currentcolor;">
-                <path
-                    d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z"
-                    fill-rule="evenodd"></path>
-            </svg><h1>4.97 263 Reviews</h1>
+            <div>
+                <smart-calendar selection-mode="one" view="portrait" hide-other-month-days
+                    view-sections='["title", "header", "footer"]' display-mode-view="list"
+                    footer-template="templateWithButtons"></smart-calendar>
             </div>
-
-            <div class="rangedisplay">
-                <div class="rangedisplay-left">
-                    <div class="one">
-                        <p>Cleanliness</p>
-                        <div class="one">
-                            <span class="rating1"></span>
-                            <p>4.9</p>
-                        </div>
-                    </div>
-                    <div class="one ">
-                        <p>Communication</p>
-                        <div class="one">
-                            <span class="rating1"></span>
-                            <p>5.0</p>
-                        </div>
-                    </div>
-                    <div class="one">
-                        <p>Check-in </p>
-                        <div class="one">
-                            <span class="rating1"></span>
-                            <p>5.0</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="rangedisplay-right">
-                    <div class="one">
-                        <p>Cleanliness</p>
-                        <div class="one">
-                            <span class="rating1"></span>
-                            <p>4.9</p>
-                        </div>
-                    </div>
-                    <div class="one">
-                        <p>Communication</p>
-                        <div class="one">
-                            <span class="rating1"></span>
-                            <p>5.0</p>
-                        </div>
-                    </div>
-                    <div class="one">
-                        <p>Check-in </p>
-                        <div class="one">
-                            <span class="rating1"></span>
-                            <p>5.0</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- Comment section -->
-
-            <section class="comment">
-                <div class="comment-left">
-                    <div>
-                        <div class="firstcomment">
-                            <img src="https://a0.muscache.com/im/users/8717030/profile_pic/1405644603/original.jpg?im_w=240" alt="">
-                            <div class="name">
-                                <p>Andrew</p>
-                                <p class="date">January 2023</p>
-                            </div>
-                        </div>
-                        <p>Best stay of our life! Incredible hosts, and most amazing house! So clean, so comfortable, so walkable, will stay here every time we are in Chiang Mai!</p>
-                    </div>
-
-                    <div>
-                        <div class="firstcomment">
-                            <img src="https://a0.muscache.com/im/pictures/user/500ef67e-f0b9-4003-b63d-d27ce7dbc950.jpg?im_w=240" alt="">
-                            <div class="name">
-                                <p>Wendy</p>
-                                <p class="date">January 2023</p>
-                            </div>
-                        </div>
-                        <p>Wow! This was just the best Airbnb ever. Fantastic house with loads of space, the most incredible Thai food for breakfast each morning and absolutely unbeatable hospitality. Thank</p>
-                    </div>
-
-                    <div>
-                        <div class="firstcomment">
-                            <img src="https://a0.muscache.com/im/pictures/user/bd136f22-d612-4c3a-b740-1879660860fd.jpg?im_w=240" alt="">
-                            <div class="name">
-                                <p>Bethany</p>
-                                <p class="date">December 2022</p>
-                            </div>
-                        </div>
-                        <p>I wish we stayed for longer - the property is in such a beautiful area, so close to the main sections of Chiangmai but so peaceful and quiet. It felt like a proper community - the hosts</p>
-                    </div>
-                </div>
-                <div class="comment-right">
-                    <div>
-                        <div class="firstcomment">
-                            <img src="https://a0.muscache.com/im/pictures/user/c29aef0f-ec9c-4ebf-b04d-7884cdb39092.jpg?im_w=240" alt="">
-                            <div class="name">
-                                <p>Kevin</p>
-                                <p class="date">January 2023</p>
-                            </div>
-                        </div>
-                        <p>Very kind and communicative hosts. Great location near old town. House was very clean and had everything we needed .</p>
-                    </div>
-                    <div>
-                        <div class="firstcomment">
-                            <img src="https://a0.muscache.com/im/users/662013/profile_pic/1442005400/original.jpg?im_w=240" alt="">
-                            <div class="name">
-                                <p>Jeff</p>
-                                <p class="date">January 2023</p>
-                            </div>
-                        </div>
-                        <p>Our family of 5 stayed here for 3 weeks and it was amazing. Couldn't be happier with both the place and the people. Communication was fantastic before we arrived and during.</p>
-                    </div>
-                    <div>
-                        <div class="firstcomment">
-                            <img src="https://a0.muscache.com/im/pictures/user/ed61f655-d858-41ee-8441-a65963614f4b.jpg?im_w=240" alt="">
-                            <div class="name">
-                                <p>Michael</p>
-                                <p class="date">January 2023</p>
-                            </div>
-                        </div>
-                        <p>a phenomenal experience. beautiful large wooden house with comfortable beds and great air conditioning. close to a few small restaurants and walking distance to the busy areas.</p>
-                    </div>
-                </div>
-
-               
-            </section>
-
-            <button class="btnall">Show all 63 amenities</button>
-
-            <hr>
 
 
 
